tests/error/we_should_not_be_able_to_index_a_pointer_to_an_unresolved_struct.c
// fail "'unresolved': Undeclared struct."

static void function(struct unresolved *unresolved){
    unresolved[1];
}

// struct unresolved{ int member; };

int main(){
    
}
